syntax = "proto3";
package proto;

option go_package = "./proto";

import "common.proto";

message MageTalents {
	// Arcane
	int32 arcane_subtlety = 1;
	int32 arcane_focus = 2;
	int32 improved_arcane_missiles = 3;
	int32 wand_specialization = 4;
	int32 magic_absorption = 5;
	int32 arcane_concentration = 6;
	int32 magic_attunement = 7;
	int32 improved_arcane_explosion = 8;
	bool arcane_resilience = 9;
	int32 improved_mana_shield = 10;
	int32 improved_counterspell = 11;
	int32 arcane_meditation = 12;
	bool presence_of_mind = 13;
	int32 arcane_mind = 14;
	int32 arcane_instability = 15;
	bool arcane_power = 16;

	// Fire
	int32 improved_fireball = 17;
	int32 impact = 18;
	int32 ignite = 19;
	int32 flame_throwing = 20;
	int32 improved_fire_blast = 21;
	int32 incinerate = 22;
	int32 improved_flamestrike = 23;
	bool pyroblast = 24;
	int32 burning_soul = 25;
	int32 improved_scorch = 26;
	int32 improved_fire_ward = 27;
	int32 master_of_elements = 28;
	int32 critical_mass = 29;
	bool blast_wave = 30;
	int32 fire_power = 31;
	bool combustion = 32;

	// Frost
	int32 frost_warding = 33;
	int32 improved_frostbolt = 34;
	int32 elemental_precision = 35;
	int32 ice_shards = 36;
	int32 frostbite = 37;
	int32 improved_frost_nova = 38;
	int32 permafrost = 39;
	int32 piercing_ice = 40;
	bool cold_snap = 41;
	int32 improved_blizzard = 42;
	int32 arctic_reach = 43;
	int32 frost_channeling = 44;
	int32 shatter = 45;
	bool ice_block = 46;
	int32 improved_cone_of_cold = 47;
	int32 winters_chill = 48;
	bool ice_barrier = 49;
}

enum MageMajorGlyph {
	MageMajorGlyphNone = 0;
	GlyphOfArcaneBarrage = 45738;
	GlyphOfArcaneBlast = 44955;
	GlyphOfArcaneExplosion = 42734;
	GlyphOfArcaneMissiles = 42735;
	GlyphOfArcanePower = 42736;
	GlyphOfBlink = 42737;
	GlyphOfDeepFreeze = 45736;
	GlyphOfEternalWater = 50045;
	GlyphOfEvocation = 42738;
	GlyphOfFireBlast = 42740;
	GlyphOfFireball = 42739;
	GlyphOfFrostNova = 42741;
	GlyphOfFrostbolt = 42742;
	GlyphOfFrostfire = 44684;
	GlyphOfIceArmor = 42743;
	GlyphOfIceBarrier = 45740;
	GlyphOfIceBlock = 42744;
	GlyphOfIceLance = 42745;
	GlyphOfIcyVeins = 42746;
	GlyphOfInvisibility = 42748;
	GlyphOfLivingBomb = 45737;
	GlyphOfMageArmor = 42749;
	GlyphOfManaGem = 42750;
	GlyphOfMirrorImage = 45739;
	GlyphOfMoltenArmor = 42751;
	GlyphOfPolymorph = 42752;
	GlyphOfRemoveCurse = 42753;
	GlyphOfScorch = 42747;
	GlyphOfWaterElemental = 42754;
}
enum MageMinorGlyph {
	MageMinorGlyphNone = 0;
	GlyphOfArcaneIntellect = 43339;
	GlyphOfBlastWave = 44920;
	GlyphOfFireWard = 43357;
	GlyphOfFrostArmor = 43359;
	GlyphOfFrostWard = 43360;
	GlyphOfSlowFall = 43364;
	GlyphOfThePenguin = 43361;
}

message Mage {
	message Rotation {
		// Arcane Options.
		int32 extra_blasts_during_first_ap = 10 [deprecated = true];
		int32 missile_barrage_below_arcane_blast_stacks = 14 [deprecated = true];
		double missile_barrage_below_mana_percent = 15;
		double blast_without_missile_barrage_above_mana_percent = 16;
		double only_3_arcane_blast_stacks_below_mana_percent = 17;
		bool use_arcane_barrage = 20;

		// Fire Options.
		enum PrimaryFireSpell {
			Fireball = 0;
			FrostfireBolt = 1;
			Scorch = 2;
		}
		PrimaryFireSpell primary_fire_spell = 3;
		
		bool maintain_improved_scorch = 4;

		// Frost Options.
		bool use_ice_lance = 18;
		double water_elemental_disobey_chance = 6 [deprecated = true];
	}
	Rotation rotation = 1;
	
	message Options {
		enum ArmorType {
			NoArmor = 0;
			MageArmor = 1;
			MoltenArmor = 2;
		}
		ArmorType armor = 1;

		int32 focus_magic_percent_uptime = 3;
		UnitReference focus_magic_target = 4;

		// Chance for water elemental to disobey, doing nothing rather than cast.
		double water_elemental_disobey_chance = 7;
	}
	Options options = 3;
}
